Tried to fix bug of search function can not work on mobile and tablet

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,6 +24,7 @@
     font-size: 1.4rem;
     padding: 5px;
     border-radius: 5px;
+    z-index: 999;
 }
 
 .search-icon {
@@ -64,7 +65,6 @@
 
 @media screen and (max-width: 780px) {
     .header-container{
-        /* display: flex; */
         flex-direction: column;
         height: 130px;
         justify-content: center;
